Fixed alignment of footer on mobile

--- a/styles/3-pages/_8footer.sass
+++ b/styles/3-pages/_8footer.sass
@@ -74,6 +74,9 @@ a.extLink
       // margin: 0 6px
 
 @media(max-width: 992px)
-      #contact-section .address
-            text-align: center
-            
+      #contact-section 
+            .address
+                  text-align: center
+            .row
+                  padding-right: 0
+                  margin-left: 5px !important
